force-app/main/default/objects/Registration__c/fields/Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>Activation_Date__c</fullName>
    <inlineHelpText>Initial registration of any type with the NSCP</inlineHelpText>
    <label>Activation Date</label>
    <type>Date</type>
</CustomField>