force-app/main/default/objects/Registration__c/fields/AIT_Transfer__c.field-meta.xml
<CustomField>
    <fullName>AIT_Transfer__c</fullName>
    <label>AIT Transfer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>