force-app/main/default/objects/Registration__c/fields/Approved_Application__c.field-meta.xml
<CustomField>
    <fullName>Approved_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approved Application</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Case.Account.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Registrant__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Registrations</relationshipLabel>
    <relationshipName>Application_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>