force-app/main/default/objects/Registration__c/fields/Authorized_To_Administer_By_Injection__c.field-meta.xml
<CustomField>
    <fullName>Authorized_To_Administer_By_Injection__c</fullName>
    <label>Authorized To Administer By Injection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>