force-app/main/default/objects/Registration__c/fields/AvgScheduledOtherStaffhoursweek__c.field-meta.xml
<CustomField>
    <fullName>AvgScheduledOtherStaffhoursweek__c</fullName>
    <label>Avg Scheduled Other Staff hours/week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>