force-app/main/default/objects/Registration__c/fields/Condition_Description__c.field-meta.xml
<CustomField>
    <fullName>Condition_Description__c</fullName>
    <label>Condition Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>