force-app/main/default/objects/Registration__c/fields/Convocation__c.field-meta.xml
<CustomField>
    <fullName>Convocation__c</fullName>
    <description>graduating institution i.e Niagara College</description>
    <label>Convocation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>