force-app/main/default/objects/Registration__c/fields/Country_Of_Graduation__c.field-meta.xml
<CustomField>
    <fullName>Country_Of_Graduation__c</fullName>
    <label>Country Of Graduation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>