force-app/main/default/objects/Registration__c/fields/Date_Relicensed__c.field-meta.xml
<CustomField>
    <fullName>Date_Relicensed__c</fullName>
    <label>Date Re-licensed</label>
    <type>Date</type>
</CustomField>