force-app/main/default/objects/Registration__c/fields/Date_Transition_Period_Report__c.field-meta.xml
<CustomField>
    <fullName>Date_Transition_Period_Report__c</fullName>
    <label>Date Transition Period Report</label>
    <type>Date</type>
</CustomField>