force-app/main/default/objects/Registration__c/fields/DIS_Account_Phone__c.field-meta.xml
<CustomField>
    <fullName>DIS_Account_Phone__c</fullName>
    <formula>SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE( Registrant__r.Primary_Phone_Number__c, &apos;(&apos;, &apos;&apos;),&apos;)&apos;,&apos;&apos;),&apos;-&apos;,&apos;&apos;),&apos; &apos;,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DIS Account Phone</label>
    <type>Text</type>
</CustomField>