force-app/main/default/objects/Registration__c/fields/DIS_Account_Status__c.field-meta.xml
<CustomField>
    <fullName>DIS_Account_Status__c</fullName>
    <formula>IF(ISPICKVAL(Registrant__r.Active__c , &apos;Yes&apos;),&apos;active&apos;,&apos;inactive&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DIS Account Status</label>
    <type>Text</type>
</CustomField>