force-app/main/default/objects/Registration__c/fields/DIS_Pharmacy_Name__c.field-meta.xml
<CustomField>
    <fullName>DIS_Pharmacy_Name__c</fullName>
    <formula>Registrant__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DIS Pharmacy Name</label>
    <type>Text</type>
</CustomField>