force-app/main/default/objects/Registration__c/fields/Field_Of_Practice__c.field-meta.xml
<CustomField>
    <fullName>Field_Of_Practice__c</fullName>
    <label>Field Of Practice</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Community</fullName>
            </value>
            <value>
                <fullName>Hospital</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>