force-app/main/default/objects/Registration__c/fields/Initial_Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Registration_Date__c</fullName>
    <inlineHelpText>The first time that a registrant Licensed in any jurisdiction</inlineHelpText>
    <label>Initial Licensure Date</label>
    <type>Date</type>
</CustomField>