force-app/main/default/objects/Registration__c/fields/Lapsed_Date__c.field-meta.xml
<CustomField>
    <fullName>Lapsed_Date__c</fullName>
    <label>Lapsed Date</label>
    <type>Date</type>
</CustomField>