force-app/main/default/objects/Registration__c/fields/Licence_Paid__c.field-meta.xml
<CustomField>
    <fullName>Licence_Paid__c</fullName>
    <label>Licence Paid</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>