force-app/main/default/objects/Registration__c/fields/Membership_Year__c.field-meta.xml
<CustomField>
    <fullName>Membership_Year__c</fullName>
    <label>Membership Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>