force-app/main/default/objects/Registration__c/fields/Most_Recent_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Renewal_Date__c</fullName>
    <label>Most Recent Renewal Date</label>
    <type>Date</type>
</CustomField>