force-app/main/default/objects/Registration__c/fields/NAPRA_Gateway_ID__c.field-meta.xml
<CustomField>
    <fullName>NAPRA_Gateway_ID__c</fullName>
    <externalId>true</externalId>
    <label>NAPRA Gateway ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>