force-app/main/default/objects/Registration__c/fields/NSCP_Licensure_Date__c.field-meta.xml
<CustomField>
    <fullName>NSCP_Licensure_Date__c</fullName>
    <inlineHelpText>Date of initial license with NSCP</inlineHelpText>
    <label>NSCP Licensure Date</label>
    <type>Date</type>
</CustomField>