force-app/main/default/objects/Registration__c/fields/NSCP_Registration_Number1__c.field-meta.xml
<CustomField>
    <fullName>NSCP_Registration_Number1__c</fullName>
    <displayFormat>{0000000}</displayFormat>
    <label>Pharmacy License Number</label>
    <type>AutoNumber</type>
</CustomField>