force-app/main/default/objects/Registration__c/fields/NSCP_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>NSCP_Registration_Number__c</fullName>
    <formula>Prefix_system__c + Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NSCP Registration Number</label>
    <type>Text</type>
</CustomField>