force-app/main/default/objects/Registration__c/fields/NSH_Account_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>NSH_Account_Address_Line_2__c</fullName>
    <formula>Registrant__r.PersonContact.Address_Line_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NSH Account Address Line 2</label>
    <type>Text</type>
</CustomField>