force-app/main/default/objects/Registration__c/fields/NSH_Account_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>NSH_Account_Email_Address__c</fullName>
    <formula>Registrant__r.PersonContact.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NSH Account Email Address</label>
    <type>Text</type>
</CustomField>