force-app/main/default/objects/Registration__c/fields/NSH_Account_First_Given_Name__c.field-meta.xml
<CustomField>
    <fullName>NSH_Account_First_Given_Name__c</fullName>
    <formula>Registrant__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NSH Account First Given Name</label>
    <type>Text</type>
</CustomField>