force-app/main/default/objects/Registration__c/fields/NSH_Account_PersonBirthdate__c.field-meta.xml
<CustomField>
    <fullName>NSH_Account_PersonBirthdate__c</fullName>
    <formula>Registrant__r.PersonContact.Birthdate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NSH Account PersonBirthdate</label>
    <type>Date</type>
</CustomField>