force-app/main/default/objects/Registration__c/fields/NSH_Account_PersonMailingCity__c.field-meta.xml
<CustomField>
    <fullName>NSH_Account_PersonMailingCity__c</fullName>
    <formula>IF(ISPICKVAL( Type__c , &apos;Pharmacy&apos;),  Registrant__r.BillingCity , Registrant__r.PersonContact.MailingCity)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NSH Account PersonMailingCity</label>
    <type>Text</type>
</CustomField>