force-app/main/default/objects/Registration__c/fields/NSH_Account_PersonMailingCountry__c.field-meta.xml
<CustomField>
    <fullName>NSH_Account_PersonMailingCountry__c</fullName>
    <formula>Registrant__r.PersonContact.MailingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NSH Account PersonMailingCountry</label>
    <type>Text</type>
</CustomField>