force-app/main/default/objects/Registration__c/fields/NSH_Account_PersonMailingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>NSH_Account_PersonMailingPostalCode__c</fullName>
    <formula>IF(ISPICKVAL( Type__c , &apos;Pharmacy&apos;),  Registrant__r.BillingPostalCode  , Registrant__r.PersonContact.MailingPostalCode)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NSH Account PersonMailingPostalCode</label>
    <type>Text</type>
</CustomField>