force-app/main/default/objects/Registration__c/fields/NSH_Account_PersonMailingState__c.field-meta.xml
<CustomField>
    <fullName>NSH_Account_PersonMailingState__c</fullName>
    <formula>Registrant__r.PersonContact.MailingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NSH Account PersonMailingState</label>
    <type>Text</type>
</CustomField>