force-app/main/default/objects/Registration__c/fields/NSH_Account_PersonMailingStreet__c.field-meta.xml
<CustomField>
    <fullName>NSH_Account_PersonMailingStreet__c</fullName>
    <formula>IF(ISPICKVAL( Type__c , &apos;Pharmacy&apos;), Registrant__r.BillingStreet,  Registrant__r.PersonContact.MailingStreet)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NSH Account PersonMailingStreet</label>
    <type>Text</type>
</CustomField>