force-app/main/default/objects/Registration__c/fields/NSH_Account_Sex_At_Birth__c.field-meta.xml
<CustomField>
    <fullName>NSH_Account_Sex_At_Birth__c</fullName>
    <formula>TEXT(Registrant__r.PersonContact.Sex_At_Birth__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NSH Account Sex At Birth</label>
    <type>Text</type>
</CustomField>