force-app/main/default/objects/Registration__c/fields/NSH_Account_Suffix__c.field-meta.xml
<CustomField>
    <fullName>NSH_Account_Suffix__c</fullName>
    <formula>Registrant__r.Suffix</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NSH Account Suffix</label>
    <type>Text</type>
</CustomField>