force-app/main/default/objects/Registration__c/fields/NSH_Account_Surname__c.field-meta.xml
<CustomField>
    <fullName>NSH_Account_Surname__c</fullName>
    <formula>Registrant__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NSH Account Surname</label>
    <type>Text</type>
</CustomField>