force-app/main/default/objects/Registration__c/fields/NSH_Condition_Type_translation__c.field-meta.xml
<CustomField>
    <fullName>NSH_Condition_Type_translation__c</fullName>
    <formula>IF(NSH_Status_Reason_Translation__c = &apos;PRAC&apos;,&apos;STANDARD&apos; , if(NSH_Status_Reason_Translation__c = &apos;NONPRAC&apos;,&apos;ASSC&apos;,&apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NSH Condition Type translation</label>
    <type>Text</type>
</CustomField>