force-app/main/default/objects/Registration__c/fields/NSH_Graduation_Year__c.field-meta.xml
<CustomField>
    <fullName>NSH_Graduation_Year__c</fullName>
    <formula>TEXT(BLANKVALUE( VALUE( Year_Of_Graduation__c ) , YEAR( Graduation_Date__c )))</formula>
    <label>NSH Graduation Year</label>
    <type>Text</type>
</CustomField>