force-app/main/default/objects/Registration__c/fields/NSH_Second_Given_Name__c.field-meta.xml
<CustomField>
    <fullName>NSH_Second_Given_Name__c</fullName>
    <formula>Registrant__r.MiddleName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NSH Second Given Name</label>
    <type>Text</type>
</CustomField>