force-app/main/default/objects/Registration__c/fields/NSH_Status_Reason_Translation__c.field-meta.xml
<CustomField>
    <fullName>NSH_Status_Reason_Translation__c</fullName>
    <formula>IF( OR(ISPICKVAL( Class__c , &apos;Practicing Direct&apos;),ISPICKVAL( Class__c , &apos;Practicing Indirect&apos;)) , &apos;PRAC&apos;,  IF(ISPICKVAL(Class__c, &apos;Non-Practicing&apos;),&apos;NONPRAC&apos;,&apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NSH Status Reason Translation</label>
    <type>Text</type>
</CustomField>