force-app/main/default/objects/Registration__c/fields/Offered_Services__c.field-meta.xml
<CustomField>
    <fullName>Offered_Services__c</fullName>
    <label>Offered Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Services</valueSetName>
    </valueSet>
</CustomField>