force-app/main/default/objects/Registration__c/fields/Pathway__c.field-meta.xml
<CustomField>
    <fullName>Pathway__c</fullName>
    <label>Pathway</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CCAPP</fullName>
            </value>
            <value>
                <fullName>Resumption</fullName>
            </value>
            <value>
                <fullName>Bridging Program</fullName>
            </value>
            <value>
                <fullName>International Pharmacy Graduate</fullName>
            </value>
            <value>
                <fullName>Eligible International Jurisdiction</fullName>
            </value>
            <value>
                <fullName>Canadian Mobility Agreement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>