force-app/main/default/objects/Registration__c/fields/Pharmacy_Manager__c.field-meta.xml
<CustomField>
    <fullName>Pharmacy_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pharmacy Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Registrations (Pharmacy Manager)</relationshipLabel>
    <relationshipName>Registrations2</relationshipName>
    <type>Lookup</type>
</CustomField>