force-app/main/default/objects/Registration__c/fields/Pharmacy_Name__c.field-meta.xml
<CustomField>
    <fullName>Pharmacy_Name__c</fullName>
    <description>Used in flow to display the pharmacy name instead of lookup id</description>
    <formula>Registrant__r.Name</formula>
    <label>Pharmacy Name</label>
    <type>Text</type>
</CustomField>