force-app/main/default/objects/Registration__c/fields/Pharmacy_Owner_Account__c.field-meta.xml
<CustomField>
    <fullName>Pharmacy_Owner_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pharmacy Owner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Registrations (Pharmacy Owner)</relationshipLabel>
    <relationshipName>Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>