force-app/main/default/objects/Registration__c/fields/Pharmacy_Owner_Deprecated__c.field-meta.xml
<CustomField>
    <fullName>Pharmacy_Owner_Deprecated__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pharmacy Owner Deprecated</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Registrations (Pharmacy Owner Deprecated)</relationshipLabel>
    <relationshipName>Registrations1</relationshipName>
    <type>Lookup</type>
</CustomField>