force-app/main/default/objects/Registration__c/fields/Pharmacy_Owner_Rep__c.field-meta.xml
<CustomField>
    <fullName>Pharmacy_Owner_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pharmacy Owner Rep</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Registrations (Pharmacy Owner Rep)</relationshipLabel>
    <relationshipName>Registrations3_del</relationshipName>
    <type>Lookup</type>
</CustomField>