force-app/main/default/objects/Registration__c/fields/PR_Code__c.field-meta.xml
<CustomField>
    <fullName>PR_Code__c</fullName>
    <label>PR Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>