force-app/main/default/objects/Registration__c/fields/PR_Education_Code__c.field-meta.xml
<CustomField>
    <fullName>PR_Education_Code__c</fullName>
    <label>PR Education Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BSCPHARM</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>PHARMD</fullName>
            </value>
            <value>
                <fullName>MSCPHARM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>