force-app/main/default/objects/Registration__c/fields/Prefix_system__c.field-meta.xml
<CustomField>
    <fullName>Prefix_system__c</fullName>
    <label>Prefix (system)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>