force-app/main/default/objects/Registration__c/fields/Previous_Membership_Class__c.field-meta.xml
<CustomField>
    <fullName>Previous_Membership_Class__c</fullName>
    <label>Previous Membership Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Class</valueSetName>
    </valueSet>
</CustomField>