force-app/main/default/objects/Registration__c/fields/Previous_Membership_Type__c.field-meta.xml
<CustomField>
    <fullName>Previous_Membership_Type__c</fullName>
    <label>Previous Membership Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Type_Value_Set</valueSetName>
    </valueSet>
</CustomField>